--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,28 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "header";
+@import "burger-menu";
+@import "navigate-menu";
 
 body {
-  background: $c-gray;
+  font-family: "Montserrat-Bold.ttf", sans-serif;
+  margin: 0;
+  min-width: 320px;
+  box-sizing: border-box;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
 }
