--- a/src/styles/burger-menu.scss
+++ b/src/styles/burger-menu.scss
@@ -1,18 +1,17 @@
 .header {
-  &__menu-btn {
-    position: relative;
-    bottom: 0;
+  &__menu-input {
+    display: none;
   }
 
-  &__menu-input {
-    opacity: 0;
+  &__burger-toogler {
+    display: flex;
+    align-items: center;
+    align-self: center;
     position: absolute;
-    left: -5px;
-    top: -10px;
-    z-index: 2;
-    width: 20px;
-    height: 20px;
+    left: 55px;
     cursor: pointer;
+    width: 25px;
+    height: 25px;
   }
 
   &__burger-slice,
@@ -20,29 +19,44 @@
   &__burger-slice::after {
     content: "";
     position: absolute;
-    width: 20px;
+    width: 25px;
     height: 3px;
     background-color: #0f0e08;
     transition: 0.6s;
   }
 
   &__burger-slice::before {
-    transform: translateY(-5px);
+    transform: translateY(8px);
   }
 
   &__burger-slice::after {
-    transform: translateY(5px);
+    transform: translateY(-8px);
   }
 
-  &__menu-input:checked ~ &__burger-slice {
+  &__menu-input:checked ~ &__menu-section &__burger-slice::before {
     width: 0;
   }
 
-  &__menu-input:checked ~ &__burger-slice::before {
+  &__menu-input:checked ~ &__menu-section &__burger-slice {
     transform: rotate(45deg);
   }
 
-  &__menu-input:checked ~ &__burger-slice::after {
-    transform: rotate(-45deg);
+  &__menu-input:checked ~ &__menu-section &__burger-slice::after {
+    transform: rotate(-90deg);
+  }
+
+  &__menu-input:checked ~ &__menu-section &__nav {
+    visibility: visible;
+    position: relative;
+    opacity: 1;
+    left: 50px;
+  }
+
+  &__menu-input:checked ~ &__menu-section &__logo-name {
+    visibility: hidden;
+  }
+
+  &__menu-input:checked ~ &__menu-section {
+    background-color: #fff;
   }
 }
