--- a/src/styles/navigate-menu.scss
+++ b/src/styles/navigate-menu.scss
@@ -1,6 +1,32 @@
 .header {
+  &__nav {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 50px;
+    transition: 0.3s;
+    visibility: hidden;
+    position: absolute;
+    opacity: 0;
+    left: -300px;
+  }
+
   &__ul {
     display: flex;
+    flex-shrink: 0;
     justify-content: space-between;
+    column-gap: 50px;
+  }
+
+  &__link {
+    color: #0f0e08;
+    transition: 0.3s;
+    text-transform: uppercase;
+    font-size: 12px;
+
+    &:hover {
+      opacity: 0.5;
+    }
   }
 }
