--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -30,3 +30,15 @@ ul {
 a {
   text-decoration: none;
 }
+
+.container {
+  max-width: 1920px;
+  @media screen and (min-width: 650px) {
+    padding-left: 50px;
+  }
+
+  @media screen and (max-width: 650px) {
+    padding-left: 25px;
+  }
+  
+}
