--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,9 +1,11 @@
 .header {
+  $header: &;
+
   height: 100vh;
   position: relative;
   max-width: 1920px;
-  max-height: 910px;
   margin: 0 auto;
+  z-index: 1;
 
   @media screen and (max-width: 768px) {
     height: 80vh;
@@ -19,7 +21,6 @@
     top: 0;
     z-index: -1;
     height: 100vh;
-    max-height: 910px;
     width: 60%;
     @media screen and (max-width: 768px) {
       height: 80vh;
@@ -33,7 +34,6 @@
 
   &__image {
     width: 100%;
-    max-height: 910px;
     height: inherit;
   }
 
@@ -141,6 +141,12 @@
     transition: 1s;
     border: 1px solid #1a5a4c;
 
+    &:hover ~ #{$header}__ticket-arrow {
+      background-color: #fff;
+      border: 1px solid #1a5a4c;
+      box-sizing: border-box;
+    }
+
     &:hover {
       color: #fff;
       background-color: #1a5a4c;
@@ -157,6 +163,7 @@
     height: 70px;
     background-color: #1a5a4c;
     cursor: pointer;
+    transition: 0.3s;
 
     &::after {
       content: url(../images/vector.svg);
@@ -178,6 +185,10 @@
     transform: rotate(-90deg);
     position: absolute;
     font-size: 18px;
+
+    & > a {
+      color: #687480;
+    }
 
     @media screen and (max-width: 1050px) {
       display: none;
