--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,8 @@
 @import "header";
 @import "burger-menu";
 @import "navigate-menu";
+@import "events";
+@import "wall-painting";
 
 body {
   font-family: "Montserrat-Bold.ttf", sans-serif;
@@ -40,5 +42,17 @@ a {
   @media screen and (max-width: 650px) {
     padding-left: 25px;
   }
-  
+
+  @media screen and (max-width: 425px) {
+    padding-left: 13px;
+  }
+
+}
+
+.main-content {
+  max-width: 1920px;
+  margin: 0 auto;
+  @media screen and (min-width:1920px) {
+    padding: 0 calc(50% - 892px);
+  }
 }
