--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -6,6 +6,13 @@
 @import "navigate-menu";
 @import "events";
 @import "wall-painting";
+@import "gallery";
+@import "subscribe";
+@import "footer";
+
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: "Montserrat-Bold.ttf", sans-serif;
@@ -46,13 +53,14 @@ a {
   @media screen and (max-width: 425px) {
     padding-left: 13px;
   }
-
 }
 
 .main-content {
+  display: grid;
+  row-gap: 100px;
   max-width: 1920px;
-  margin: 0 auto;
-  @media screen and (min-width:1920px) {
+  margin: 100px 0 auto;
+  @media screen and (min-width: 1920px) {
     padding: 0 calc(50% - 892px);
   }
 }
